--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
 .ipynb_checkpoints/
-exercices.txt
-python-introduction.md
-python-introduction.odt
-python-introduction.pdf
-departement.csv
+exercice_tableau_correction.ipynb
